Update style.css and index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,14 @@
                 </div>
             </section>
 
+
+           
+        </main>
+
+        
+    </div>
+
+    <script src="{{ url_for('static', filename='js/refresh.js') }}"></script>
             
 
                           
